added Ogre Entity race and all, and fixed 2 height regions not generating